[package]
name = "advent_of_code_2025"
version = "0.1.0"
authors = ["Christopher Luu <nuudles@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.12.2"
lazy_static = "1.5.0"
counter = "0.7.0"
itertools = "0.14.0"
pathfinding = "4.14.0"
cached = "0.56.0"
gcd = "2.3.0"
mod_exp = "1.0.1"
crossterm = "0.29.0"
